# BitTorrentClient

./: #test.cpp#  .#test.txt  CMakeCache.txt  CMakeLists.txt  LE JOUEUR D’ÉCHECS - Stefan Zweig.epub  Makefile  cmake_install.cmake  output.txt  output2.txt  response.txt  test.txt  test_peer.cpp
lib/: Metamorphose EP.torrent
lib/bencoding/: #bencoding.h#
lib/nlohmann/: json.hpp
notes/: #notes.txt#  a.out  good_request.txt  notes.txt  notes.txt~  test_url_encode.cpp  test_url_encode.cpp~
src/: a.out  main.cpp  my_own_exceptions.hpp  test_add_percent.cpp
src/BytesManipulator/: bytes_manipulator.cpp  bytes_manipulator.hpp
src/Networking/: network.cpp  network.hpp  patron_network.hpp
src/PeerManager/: peer_manager.cpp  peer_manager.hpp
src/TorrentManager/: bencode_parser.cpp  bencode_parser.hpp  manage_torrent_file.cpp  manage_torrent_file.hpp  patron_manage_torrent_file.hpp
subject/: #find_perfect_ip.cpp#  #test_fill_file.cpp#  #test_tcp.cpp#  .#test_tcp.cpp  LES_ECHECS.epub  Les_echecs.epub  a.out  echecs.epub  find_perfect_ip.cpp  find_perfect_ip.cpp~  internet1.cpp  notes_network.txt  output.txt  test.txt  test_con.cpp  test_file_content.cpp  test_length.cpp  test_length.cpp~  test_octal.cpp  test_tcp.cpp  test_tcp.cpp~
tests/: a.out  read_file.cpp  test.epub  test_fill_zeros.cpp
